the header part desgin is finished

--- a/index.html
+++ b/index.html
@@ -21,9 +21,39 @@
     <!-- custom style link  -->
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body>
+  <body class="lexend-normal">
     <!-- header part start  -->
-    <header></header>
+    <header class="">
+      <div class="bg-amber-100 pt-2 pb-6">
+        <!-- navbar part  -->
+        <div class="navbar container mx-auto">
+          <div class="navbar-start">
+            <div class="dropdown">
+              <button class="btn btn-accent font-semibold text-xl px-7">
+                Blog
+              </button>
+            </div>
+          </div>
+          <div class="navbar-center">
+            <img src="./assets/logo.png" alt="logo" />
+            <a class="font-semibold text-xl px-2">Donate Bangladesh</a>
+          </div>
+          <div class="navbar-end">
+            <img src="./assets/coin.png" alt="money icons" />
+            <span class="px-2 font-medium text-xl"> 5500 </span>
+            <span> BD</span>
+          </div>
+        </div>
+        <!-- navbar part end  -->
+      </div>
+      <!--button option part start  -->
+      <div class="text-center mt-20">
+        <button class="btn btn-accent font-semibold text-xl px-7 mr-3">
+          Donation
+        </button>
+        <button class="btn btn-outline text-xl px-7">History</button>
+      </div>
+    </header>
     <!-- header part end  -->
     <!-- main part start  -->
     <main></main>
