home page or history page done

--- a/index.html
+++ b/index.html
@@ -56,9 +56,121 @@
     </header>
     <!-- header part end  -->
     <!-- main part start  -->
-    <main></main>
+    <main class="container">
+      <article class="mt-5">
+        <!-- card 1  -->
+        <div class="grid grid-cols-2 my-4 border rounded-lg p-5">
+          <div>
+            <img src="./assets/noakhali.png" alt="feni" />
+          </div>
+          <div>
+            <button class="btn">
+              <img src="./assets/coin.png" alt="icons" />
+              <span>0</span> BDT
+            </button>
+            <h3 class="font-bold text-xl my-3">
+              Donate for Flood at Noakhali, Bangladesh
+            </h3>
+            <p class="font-light bg-[rgba(17, 17, 17, 0.7)]">
+              The recent floods in Noakhali have caused significant damage to
+              homes infrastructure. Your donation will help provide essential
+              supplies and to those affected by this disaster. Every
+              contribution, big or small, makes difference. Please join us in
+              supporting the relief efforts and making a positive impact on the
+              lives of those in need.
+            </p>
+            <form action="">
+              <input
+                class="w-full border py-5 rounded-md px-3 mt-8 mb-6"
+                type="text"
+                placeholder="Write Donation Amount"
+              />
+              <button
+                class="bg-[#00BBA6] w-full font-semibold text-xl py-5 rounded-lg"
+              >
+                Donate Now
+              </button>
+            </form>
+          </div>
+        </div>
+        <!-- card 2  -->
+        <div class="grid grid-cols-2 my-4 border rounded-lg p-5">
+          <div>
+            <img src="./assets/feni.png" alt="feni" />
+          </div>
+          <div>
+            <button class="btn">
+              <img src="./assets/coin.png" alt="icons" />
+              <span>600</span> BDT
+            </button>
+            <h3 class="font-bold text-xl my-3">
+              Donate for Flood Relief in Feni,Bangladesh
+            </h3>
+            <p class="font-light bg-[rgba(17, 17, 17, 0.7)]">
+              The recent floods in Feni have devastated local communities,
+              leading to severe disruption and loss. Your generous donation will
+              help provide immediate aid, including food, clean water, and
+              medical supplies, to those affected by this calamity. Together, we
+              can offer crucial support and help rebuild lives in the aftermath
+              of this disaster. Every contribution counts towards making a real
+              difference.
+            </p>
+            <form action="">
+              <input
+                class="w-full border py-5 rounded-md px-3 mt-8 mb-6"
+                type="text"
+                placeholder="Write Donation Amount"
+              />
+              <button
+                class="bg-[#00BBA6] w-full font-semibold text-xl py-5 rounded-lg"
+              >
+                Donate Now
+              </button>
+            </form>
+          </div>
+        </div>
+        <!-- card 3  -->
+        <div class="grid grid-cols-2 my-4 border rounded-lg p-5">
+          <div>
+            <img src="./assets/quota-protest.png" alt="feni" />
+          </div>
+          <div>
+            <button class="btn">
+              <img src="./assets/coin.png" alt="icons" />
+              <span>600</span> BDT
+            </button>
+            <h3 class="font-bold text-xl my-3">
+              Aid for Injured in the Quota Movement
+            </h3>
+            <p class="font-light bg-[rgba(17, 17, 17, 0.7)]">
+              The recent Quota movement has resulted in numerous injuries and
+              significant hardship for many individuals. Your support is crucial
+              in providing medical assistance, rehabilitation, and necessary
+              supplies to those affected. By contributing, you help ensure that
+              injured individuals receive the care and support they need during
+              this challenging time. Every donation plays a vital role in
+              alleviating their suffering and aiding in their recovery.
+            </p>
+            <form action="">
+              <input
+                class="w-full border py-5 rounded-md px-3 mt-8 mb-6"
+                type="text"
+                placeholder="Write Donation Amount"
+              />
+              <button
+                class="bg-[#00BBA6] w-full font-semibold text-xl py-5 rounded-lg"
+              >
+                Donate Now
+              </button>
+            </form>
+          </div>
+        </div>
+      </article>
+    </main>
     <!-- main part end  -->
     <!-- footer part start  -->
-    <footer></footer>
+    <footer>
+      <div class="h-24 w-full bg-amber-100 mt-14"></div>
+    </footer>
   </body>
 </html>
