--- a/history.html
+++ b/history.html
@@ -21,5 +21,66 @@
     <!-- custom style link  -->
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body class="lexend-normal">
+    <!-- header part start  -->
+    <header class="">
+      <div class="bg-amber-100 pt-2 pb-6">
+        <!-- navbar part  -->
+        <div class="navbar container mx-auto">
+          <div class="navbar-start">
+            <div class="dropdown">
+              <button class="btn btn-accent font-semibold text-xl px-7">
+                Blog
+              </button>
+            </div>
+          </div>
+          <div class="navbar-center">
+            <img src="./assets/logo.png" alt="logo" />
+            <a class="font-semibold text-xl px-2">Donate Bangladesh</a>
+          </div>
+          <div class="navbar-end">
+            <img src="./assets/coin.png" alt="money icons" />
+            <span class="px-2 font-medium text-xl"> 5500 </span>
+            <span> BD</span>
+          </div>
+        </div>
+        <!-- navbar part end  -->
+      </div>
+      <!--button option part start  -->
+      <div class="text-center mt-20">
+        <button class="btn btn-accent font-semibold text-xl px-7 mr-3">
+          Donation
+        </button>
+        <button class="btn btn-outline text-xl px-7">History</button>
+      </div>
+    </header>
+    <!-- header part end  -->
+    <!-- main part start  -->
+    <main class="container">
+      <div>
+        <div class="border rounded-lg p-5 my-7">
+          <h3 class="font-bold text-xl my-3">
+            96500 Taka is Donated for famine-2024 at Feni, Bangladesh
+          </h3>
+          <p class="font-light bg-[rgba(17, 17, 17, 0.7)]">
+            Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)
+          </p>
+        </div>
+        <!-- card 2  -->
+        <div class="border rounded-lg p-5 my-7">
+          <h3 class="font-bold text-xl my-3">
+            96500 Taka is Donated for famine-2024 at Feni, Bangladesh
+          </h3>
+          <p class="font-light bg-[rgba(17, 17, 17, 0.7)]">
+            Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)
+          </p>
+        </div>
+      </div>
+    </main>
+    <!-- main part end  -->
+    <!-- footer part start  -->
+    <footer>
+      <div class="h-24 w-full bg-amber-100 mt-14"></div>
+    </footer>
+  </body>
 </html>
