the sticky menu is finished

--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
   </head>
   <body class="lexend-normal">
     <!-- header part start  -->
-    <header class="">
+    <header id="header-bg" class="sticky top-0 left-0">
       <div class="bg-amber-100 pt-2 pb-6">
         <!-- navbar part  -->
         <div class="navbar container mx-auto">
           <div class="navbar-start">
             <div class="dropdown">
-              <button class="btn btn-accent font-semibold text-xl px-7">
+              <button
+                id="blog-page"
+                class="btn btn-accent font-semibold text-xl px-7"
+              >
                 Blog
               </button>
             </div>
@@ -63,7 +66,7 @@
     <!-- main part start  -->
     <main class="container">
       <!-- donation part start  -->
-      <div id="card-name" class="mt-5">
+      <div id="card-name" class="mt-9">
         <!-- card 1  -->
         <div class="grid grid-cols-2 my-4 border rounded-lg p-5">
           <div>
