--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,10 @@
         <div class="navbar container mx-auto">
           <div class="navbar-start">
             <div class="dropdown">
-              <button class="btn btn-accent font-semibold text-xl px-7">
+              <button
+                id="home-page"
+                class="btn btn-accent font-semibold text-xl px-7"
+              >
                 Home
               </button>
             </div>
@@ -51,7 +54,7 @@
     <!-- main part start  -->
     <main class="container">
       <div>
-        <h1 class="text-4xl font-bold">Important FAQ</h1>
+        <h1 class="text-4xl font-bold my-8">Important FAQ</h1>
 
         <div class="join join-vertical w-full">
           <div class="collapse collapse-arrow join-item border-base-300 border">
@@ -60,7 +63,20 @@
               what is the Document Object Model (DOM) ?
             </div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>
+                The Document Object Model, often referred to as the DOM, is a
+                critical component of web technology. It presents a structured,
+                tree-like representation of a web document, where every element
+                of the webpage, such as images, paragraphs, and headers, is
+                represented as an object or a 'node'. This structure allows
+                scripts, typically written in JavaScript, to interact with and
+                manipulate the content, structure, and style of the webpage in a
+                dynamic and interactive manner. The DOM is not a programming
+                language itself but an interface that bridges the gap between
+                static HTML documents and dynamic scripting languages like
+                JavaScript. It's like a canvas that allows developers to paint
+                interactive features onto a static webpage.
+              </p>
             </div>
           </div>
           <div class="collapse collapse-arrow join-item border-base-300 border">
@@ -69,7 +85,18 @@
               How do you select an element from the DOM ?
             </div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>
+                DOM Selectors, as the name suggests is used to select HTML
+                elements within a document using JavaScript. There are 5 ways in
+                which you can select elements in a DOM using selectors.
+                getElementsByTagName() getElementsByClassName() getElementById()
+                querySelector() querySelectorAll() All those methods are
+                properties of the document object. So in order to use one, we
+                should prefix those elements with the document object as,
+                document.getElementsByTagName()
+                document.getElementsByClassName() document.getElementById()
+                document.querySelector() document.querySelectorAll()
+              </p>
             </div>
           </div>
           <div class="collapse collapse-arrow join-item border-base-300 border">
@@ -79,7 +106,13 @@
               useful?
             </div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>
+                Event delegation leverages event propagation to manage events
+                efficiently. Instead of adding event listeners to multiple child
+                elements, you add a single event listener to a parent element.
+                This listener takes advantage of event bubbling to handle events
+                for its child elements.
+              </p>
             </div>
           </div>
           <div class="collapse collapse-arrow join-item border-base-300 border">
@@ -89,7 +122,13 @@
               DOM?
             </div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>
+                DOM manipulation also extends to modifying the styles of
+                elements, allowing us to create visually appealing and dynamic
+                web pages. In addition to modifying existing elements,
+                JavaScript allows us to create new elements and add them to the
+                DOM.
+              </p>
             </div>
           </div>
         </div>
@@ -107,6 +146,7 @@
     <script src="./utilities/inputFiledEmpty.js"></script>
     <script src="./utilities/getInput.js"></script>
     <script src="./utilities/getAmount.js"></script>
+    <script src="./js/blog.js"></script>
     <script src="./js/donate.js"></script>
   </body>
 </html>
