--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,9 @@
           </div>
           <div class="navbar-center">
             <img src="./assets/logo.png" alt="logo" />
-            <a class="font-semibold text-xl px-2">Donate Bangladesh</a>
+            <a class="font-semibold text-xl px-2 hidden md:block"
+              >Donate Bangladesh</a
+            >
           </div>
           <div class="navbar-end">
             <img src="./assets/coin.png" alt="money icons" />
@@ -53,7 +55,7 @@
     <!-- header part end  -->
     <!-- main part start  -->
     <main class="container">
-      <div>
+      <div class="px-3 lg:px-0">
         <h1 class="text-4xl font-bold my-8">Important FAQ</h1>
 
         <div class="join join-vertical w-full">
