the history page empty for working

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- navbar part end  -->
       </div>
       <!--button option part start  -->
-      <div class="text-center mt-20">
+      <div class="text-center mt-10 lg:mt-20">
         <button
           id="btn-donation"
           class="bg-cyan-500 py-4 border rounded-md font-semibold text-xl px-7 mr-3"
@@ -211,7 +211,14 @@
       </div>
       <!-- donation part end  -->
       <!-- History part start  -->
-      <div id="history" class="hidden"></div>
+      <div id="history" class="hidden">
+        <p
+          id="empty"
+          class="text-2xl lg:text-4xl font-bold my-20 text-center h-screen text-orange-400"
+        >
+          Your donation history is Empty !
+        </p>
+      </div>
       <!-- History part end  -->
     </main>
     <!-- main part end  -->
