--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
     <!-- header part end  -->
     <!-- main part start  -->
     <main class="container">
-      <div class="px-3 lg:px-0">
+      <div class="px-3 lg:px-0 xl:h-screen">
         <h1 class="text-4xl font-bold my-8">Important FAQ</h1>
 
         <div class="join join-vertical w-full">
